fix attribution text ovelap, prevent horizonal overflow

--- a/themes/bookvega/assets/_main.scss
+++ b/themes/bookvega/assets/_main.scss
@@ -19,6 +19,10 @@ body {
   * {
     box-sizing: inherit;
   }
+
+  overflow-x: hidden;
+  max-width: 100%;
+
 }
 
 h1,
